	1308 Golden Axe:		NEED INFO
	1475 Equestrian's Spear:	NEED INFO.
	13005 Angelic Wing Dagger:	NEED INFO.
	-----
	Incomplete or missing bonuses:
	1535 Holgrehenn's_Hammer:	Breaking your own gear at low rate when compounded with Whitesmith_card

	Missing Effects:
	12209 Life_Insurrance:		No EXP penalty on death (Recommend constant: SC_NoPenelty - Has status icon)
	12208 Field_Manual:		Increased EXP rate (Recommend constant: SC_IncreasedEXP - Has status icon)
	12210 Bubble_Gum:		Increased Drop rate (Recommend constant: SC_IncreasedDropRate - Has status icon)
	12214 Convex_Mirror:		Detect MVP spawn on minimap; doesn't work with special condition MVPs. (Recommend constant: SC_DetectMVPSpawn)
	7621 Token_of_Ziegfried:	Give player the option to revive after death, through the "Respawn/Exit" menu.

	Missing 12.1 card bonuses:
	Most 12.1 cards are using a low rate usually 1% for their effects.
	4411 Vanberk_Card 		Small chance that for 5 seconds you gain 100 crit while attacking.
	4412 Isilla_Card		Small chance that for 5 seconds your Cast Time will decrease by 50% and gain 30 flee while attacking.
	4413 Hodremlin_Card		Small chance that for 10 seconds you gain 30 Perfect Dodge when attacked.
	4417 Ice_Titan_Card		Chance that for 10 seconds you'll gain 10 Armor Defence while taking magic or physical damage.
	4425 Atros_Card			Chance that for 10 seconds your aspd will increase by 100% while attacking.

	Missing 12.1 Equipment Bonuses:
	2537 Diablos_Manteau		Increase damage taken from "Satan Morroc" by 10%
	2729 Diablos_Ring		Increase damage taken from "Satan Morroc" by 10%
	1630 Release_of_Wish		Increased recovery skill effect + 5%. On magical attack, chance for two seconds you'll recover 50 SP and 100 HP.
	1181 Tegron			At Job 70 chance to activate ATK + 50 for 5 seconds.
	1182 Bloody_Eater		When attacking, chance to gain Critical Rate + 100 and ATK + 100 for 15 seconds.