@@ -4,6 +4,12 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/10/04
+	* Added SC_EXPBOOST (Field Manual), SC_ITEMBOOST (Bubble Gum) to const.txt.
+	  Allready working [Zephyrus]
+	- Added SC_LIFEINSURANCE and SC_BOSSMAPINFO (not implemented)
+	- Updated Field Manual and Bubble Gum in the itemdb.txt file.
+	- As L0ne Wolf reported to me and based on Doddler information, the Bubble Gum
+	  only do a second try of the item drop, and it don't increase the drop rates.
 	* Added code that compacts the vending list after a purchase; fixes
 	  the problem with empty positions appearing in the list (bugreport:168)
 	* Corrected Icewall skill to be closer to official behavior
