@@ -754,8 +754,10 @@ SC_JAILED	249
 SC_ENCHANTARMS	250
 SC_MAGICALATTACK	251
 SC_SUMMER	256
-SC_BONUSEXP	257
-SC_BONUSDROP	258
+SC_EXPBOOST	257
+SC_ITEMBOOST	258
+SC_BOSSMAPINFO	259
+SC_LIFEINSURANCE	260
 
 e_gasp	0
 e_what	1
